# flutterust

./: .gitignore  Cargo.toml  Makefile.toml  README.md  pubspec.yaml
.github/workflows/: android.yml  ci.yml  ios.yml  lints.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/me/shadykhalifa/flutterust/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
native/adder/: Cargo.toml
native/adder-ffi/: Cargo.toml  binding.h  build.rs
native/adder-ffi/src/: lib.rs
native/adder/src/: lib.rs
native/scrap/: Cargo.toml
native/scrap-ffi/: Cargo.toml  binding.h  build.rs
native/scrap-ffi/src/: dart_ffi.rs  lib.rs
native/scrap/src/: lib.rs
native/scrap_ffi/: Cargo.toml
test/: widget_test.dart
