[package]
name = "scrap-ffi"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
name = "scrap_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
scrap = { path = "../scrap" }
tokio = { version = "0.2", features = ["rt-threaded"] }
ffi_helpers = "0.2"

[build-dependencies]
cbindgen = "0.14.2"